--- a/citbrains_light_webots_controller/package.xml
+++ b/citbrains_light_webots_controller/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>webots_supervisor_controller</name>
+  <name>citbrains_light_webots_controller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="s19c1012sk@s.chibakoudai.jp">satoshi</maintainer>
-  <license>MIT License</license>
+  <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
